# mass_send_gui

./: CMakeLists.txt
docs/: Otchet.odt
docs/UML/: fullgraph.graphml  unnamed0.graphml
src/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  MainWindow.cpp  MainWindow.hpp  boot.cpp
src/Models/: CMakeLists.txt  Message.cpp  Message.hpp
src/Widgets/: CMakeLists.txt  CustomTreeView.hpp  LastMsgsTreeView.cpp  LastMsgsTreeView.hpp  MsgControlsPane.cpp  MsgControlsPane.hpp  RecipientsPane.cpp  RecipientsPane.hpp  RecipientsTreeView.cpp  RecipientsTreeView.hpp
src/Windows/: CMakeLists.txt  ShowMessage.cpp  ShowMessage.hpp
src/util/: CMakeLists.txt  IconsLoader.cpp  IconsLoader.hpp
